--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>React Training</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <div id="demo-app"></div>
